--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   smooth_page_indicator: ^1.0.0+2
   provider: ^6.0.3
+  badges: ^2.0.3
 
 dev_dependencies:
   flutter_test:
