--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   provider: ^6.0.3
   badges: ^2.0.3
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/img/app_logo.png
+    - assets/img/not_found.png
     - assets/img/onboarding/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
