--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   provider: ^6.0.3
   badges: ^2.0.3
   dio: ^4.0.6
+  carousel_slider: ^4.1.1
+  fluttertoast: ^8.0.9
+  share_plus: ^4.0.10
+  shared_preferences: ^2.0.15
+  intl: ^0.17.0
+  timeago: ^3.2.2
 
 dev_dependencies:
   flutter_test:
