--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.0.15
   intl: ^0.17.0
   timeago: ^3.2.2
+  file_picker: ^3.0.4
 
 dev_dependencies:
   flutter_test:
