--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -73,8 +73,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/img/app_logo.png
-    - assets/img/not_found.png
+    - assets/img/
+    # - assets/img/app_logo.png
+    # - assets/img/not_found.png
     - assets/img/onboarding/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
