--- a/capstone_project/android/app/src/main/AndroidManifest.xml
+++ b/capstone_project/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
     package="com.example.capstone_project">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="capstone_project"
+        android:label="Nomizo"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
